2008-02-12 Harri Pitkänen <hatapitk@iki.fi>

	* Really use glibmm, gtkmm was used accidentally and it
	  is not needed.
	* Remove RPM spec file, it was outdated and distros do
	  these things on their own these days.
	* Increase version number to 0.7.

2008-02-11 Harri Pitkänen <hatapitk@iki.fi>

	* Remove glibmm sources, require external version of that
	  library instead.

2007-09-23 Harri Pitkänen <hatapitk@iki.fi>

	* No longer link enchant plugin against ncurses. This
	  drops support for original curses library, may be restored
	  later if really needed.

2007-09-10 Harri Pitkänen <hatapitk@iki.fi>

	* Another build fix for upcoming GCC 4.3 and some
	  warning fixes for GCC 4.2 and later
	* Rename LUEMINUT to README.fi
	* Update README and README.fi
	* Increase version number to 0.6.3.

2007-05-19 Harri Pitkänen <hatapitk@iki.fi>

	* Merge Enchant provider plugin from Enchant upstream CVS
	  to get implementation for list_dicts
	* Check for Enchant version 1.1.6 was not properly used in
	  the provider plugin, so do not use it anymore. May be
	  restored later, if there is need for it.

2007-04-04 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to Automake 1.10
	* Increase version number to 0.6.2
	* Build fix for upcoming GCC 4.3, thanks to Martin Michlmayr

2006-11-16 Harri Pitkänen <hatapitk@iki.fi>

	* Support parallel installations of Automake versions
	  1.9 and 1.10. Both seem to work, but default will still
	  be 1.9.

2006-10-18 Harri Pitkänen <hatapitk@iki.fi>

        * Remove misleading and occasionally broken calculation of
	  version information from configure.ac.

2006-09-30 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for formatters -Tlatin1 and -Tutf8. These do
	  not seem to be documented by the ispell manual page, but
	  KDE uses them anyway.

2006-09-29 Harri Pitkänen <hatapitk@iki.fi>

	* Clarify the plans about aspell support in documentation
	* Increase version number to 0.6.1

2006-08-26 Harri Pitkänen <hatapitk@iki.fi>
