@@ -31,7 +31,7 @@
 
 #include <stdio.h>
 
-#include <curses.h>
+#include <ncursesw/curses.h>
 
 #include "cursesui.hh"
 #include "tmispell.hh"
